--- a/ipfs-ethereum/app/package.json
+++ b/ipfs-ethereum/app/package.json
@@ -3,12 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.9.2",
     "drizzle": "^1.2.4",
     "drizzle-react": "^1.2.0",
-    "drizzle-react-components": "^1.2.1",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
-    "react-scripts": "2.1.3"
+    "ipfs-http-client": "^29.1.1",
+    "react": "^16.8.3",
+    "react-dom": "^16.8.3",
+    "react-pdf": "^4.0.5",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "2.1.5",
+    "windows-build-tools": "^5.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
