--- a/ipfs-ethereum/app/package.json
+++ b/ipfs-ethereum/app/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^3.9.2",
+    "@material-ui/icons": "^3.0.2",
+    "dexie": "^2.0.4",
     "drizzle": "^1.2.4",
     "drizzle-react": "^1.2.0",
     "ipfs-http-client": "^29.1.1",
@@ -11,8 +13,7 @@
     "react-dom": "^16.8.3",
     "react-pdf": "^4.0.5",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.5",
-    "windows-build-tools": "^5.1.0"
+    "react-scripts": "2.1.5"
   },
   "scripts": {
     "start": "react-scripts start",
