--- a/verifier-app/package.json
+++ b/verifier-app/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
-    "react-scripts": "2.1.5"
+    "react-scripts": "2.1.5",
+    "react-qr-reader": "^2.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
