--- a/verifier-app/package.json
+++ b/verifier-app/package.json
@@ -9,7 +9,7 @@
     "react-qr-reader": "^2.2.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set PORT=3001 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
