--- a/verifier-app/package.json
+++ b/verifier-app/package.json
@@ -1,21 +1,25 @@
 {
-  "name": "verifier-client",
-  "version": "0.1.0",
-  "private": true,
+  "name": "new",
+  "version": "1.0.0",
+  "description": "",
+  "keywords": [],
+  "main": "src/index.js",
   "dependencies": {
-    "react": "^16.8.3",
-    "react-dom": "^16.8.3",
-    "react-scripts": "2.1.5",
-    "react-qr-reader": "^2.2.1"
+    "react": "16.8.3",
+    "react-dom": "16.8.3",
+    "react-pdf": "4.0.5",
+    "react-qr-reader": "2.2.1",
+    "react-scripts": "2.1.8",
+    "web3": "1.0.0-beta.50"
+  },
+  "devDependencies": {
+    "typescript": "3.3.3"
   },
   "scripts": {
-    "start": "set PORT=3001 && react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
   },
   "browserslist": [
     ">0.2%",
