--- a/ethereum-app/signer-app/package.json
+++ b/ethereum-app/signer-app/package.json
@@ -6,7 +6,9 @@
     "@material-ui/core": "3.9.2",
     "@material-ui/icons": "3.0.2",
     "bs58": "4.0.1",
+    "debounce": "^1.2.0",
     "dexie": "2.0.4",
+    "drizzle": "^1.3.3",
     "ipfs-http-client": "^30.1.0",
     "qrcode.react": "^0.9.3",
     "react": "^16.8.5",
@@ -14,7 +16,7 @@
     "react-pdf": "4.0.5",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.8",
-    "web3": "^1.0.0-beta.50"
+    "shallowequal": "^1.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
